Implemented redis, basic save/retreival logic with redis structure. added get all and get by id api endpoints.

--- a/MEHv1.Web/Views/MasterPage.html
+++ b/MEHv1.Web/Views/MasterPage.html
@@ -28,7 +28,7 @@
     <div class="grid_1">
       <div class="navarea padtop">
         <a href="/">Main</a><br />
-        <a href="/post">Add Post</a><br />
+        <a href="/post/addPost">Add Post</a><br />
       </div>
     </div>
     <div class="grid_2">
